<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">CMMI 1.3</string>
   <string name="CMMI">CMMI</string>
	<string name="Avancar">Avançar</string>
	<string name="q1">Três modelos do CMMI:</string>
	<string name="q1a">a) CMMI-DEV, CMMI-ASC, CMMI-SVC</string>
	<string name="q1b">b) CMMI-DEP, CMMI-ASC, CMMI-SVC</string>
	<string name="q1c">c) CMMI-DEV, CMMI-ACQ, CMMI-SVC</string>
	<string name="q1d">d) CMMI-DEP, CMMI-ASC, CMMI-SVS</string>
	<string name="q1e">e) CMMI-DEV, CMMI-ASC, CMMI-SVS</string>
	<string name="q2">O que é CMM?</string>
	<string name="q2a">a) é o acrônimo de Capability Maturity Modern</string>
	<string name="q2b">b) é uma linguagem de programação</string>
	<string name="q2c">c) é um modelo desenvolvido pelo Serviço de Engenharia da Informação (SEI) da Universidade Carnegie-Mellon, EUA</string>
	<string name="q2d">d) é um modelo desenvolvido pelo Instituto de Engenharia de Software da Universidade Carnegie-Mellon, EUA</string>
	<string name="q2e">a) é o acrônimo de Capability Maturity Integration</string>
	<string name="q3">Para que server o CMM?</string>
	<string name="q3a">a) serve para dar às organizações diretrizes sobre como aprimorar o processo</string>
	<string name="q3b">b) serve para dar às organizações sistemas computacionais prontos</string>
	<string name="q3c">c) serve para ensinar como gerenciar uma empresa</string>
	<string name="q3d">d) serve para direcionar a empresa no caminho da competência de gestão</string>
	<string name="q3e">e) Nenhuma das respostas</string>
	<string name="q4">O acrônimo de Software Process Improvement e Capacibility Determination e seu objeto é, respectivamente:</string>
	<string name="q4a">a) ISO/SPICE, cujo objetivo é gerar sistemas que serão administrados pelo ISO/IEC para a avaliação do cliente</string>
	<string name="q4b">b) SPI/CD, cujo objetivo é gerar normas ISO/SPICE para a avaliação de processos de software</string>
	<string name="q4c">c) SPICE/ISO, cujo objetivo é gerar normas ISO/IECA para a avaliação de processos de sistemas operacionais</string>
	<string name="q4d">d) ISO/SPICE, cujo objetivo é gerar normas ISO/ICE para a avaliação de processos de redes de contato</string>
	<string name="q4e">e) ISO/SPICE, cujo objetivo é gerar normas ISO/IEC para a avaliação de processos de software</string>
	<string name="q5">Qual a finalidade da ISO/IEC 12207?</string>
	<string name="q5a">a) define um processo de desenvolvimento e manutenção de software e avaliação da qualidade do produto</string>
	<string name="q5b">b) define um processo de ciclo de vida do software</string>
	<string name="q5c">c) define um processo de ciclo de vida de uma norma ISO/IEC</string>
	<string name="q5d">d) define a validade de um processo durante o seu desenvolvimento</string>
	<string name="q5e">e) serve para ensinar os gestores a invadir sistemas das empresas concorrentes</string>
	<string name="q6">Qual a finalidade da ISO/IEC 9000-3?</string>
	<string name="q6a">a) Essa norma apresenta diretrizes para a aplicação da ISO 9000 (voltada para indústria), por empresas que desenvolvem software, para o processo de desenvolvimento e manutenção de software e avaliação da qualidade do produto</string>
	<string name="q6b">b) Essa norma apresenta diretrizes para a aplicação da ISO 9001 (voltada para indústria), por empresas que desenvolvem software, para o processo de desenvolvimento e manutenção de software e avaliação da qualidade do produto</string>
	<string name="q6c">c) Essa norma apresenta diretrizes para a aplicação da ISO 9002 (voltada para indústria), por empresas que desenvolvem software, para o processo de desenvolvimento e manutenção de software e avaliação da qualidade do produto</string>
	<string name="q6d">d) Essa norma apresenta diretrizes para a aplicação da ISO 9003 (voltada para indústria), por empresas que desenvolvem software, para o processo de desenvolvimento e manutenção de software e avaliação da qualidade do produto</string>
	<string name="q6e">e) Essa norma apresenta diretrizes para a aplicação da ISO 9004 (voltada para indústria), por empresas que desenvolvem software, para o processo de desenvolvimento e manutenção de software e avaliação da qualidade do produto</string>
	<string name="q7">O que é qualidade de projeto?</string>
	<string name="q7a">a) se refere a características que projetistas especificam para um processo de desenvolvimento. O enfoque é na implementação</string>
	<string name="q7b">b) se refere ao grau, no qual, as especificações do projeto são seguidas durante o processo de desenvolvimento. O enfoque maior é na implementação</string>
	<string name="q7c">c) se refere	a características que projetistas especificam para um item (desempenho, tolerância, etc.). O enfoque maior é nos requerimentos, na especificação e no projeto do sistema.</string>
	<string name="q7d">d) se refere	a características que projetistas especificam para um item (desempenho, tolerância, etc.). O enfoque maior é na implementação, na especificação e no projeto do sistema</string>
	<string name="q7e">e) se refere ao grau, no qual, as especificações do projeto são seguidas durante o processo de desenvolvimento. O enfoque maior é nos requerimentos, na especificação e no projeto do sistema.</string>
	<string name="q8">Qualidade de conformidade:</string>
	<string name="q8a">a) é	o grau, no qual, as	especificações do projeto são seguidas durante o processo de desenvolvimento. O enfoque maior é na implementação, na especificação e no projeto do sistema.</string>
	<string name="q8b">b) se refere a características que projetistas especificam para um processo de desenvolvimento. O enfoque é na implementação</string>
	<string name="q8c">c) é	o grau, no qual, as	especificações do projeto são seguidas durante o processo de desenvolvimento. O enfoque maior é nos requerimentos, na especificação e no projeto do sistema.</string>
	<string name="q8d">d) se refere	a características que projetistas especificam para um item (desempenho, tolerância, etc.). O enfoque maior é na implementação, na especificação e no projeto do sistema</string>
	<string name="q8e">e) é	o grau, no qual, as	especificações do projeto são seguidas durante o processo de desenvolvimento. O enfoque maior é na implementação. </string>
	<string name="q9">Ao se examinar um item baseado em suas características mensuráveis, dois tipos de qualidade podem ser encontradas:</string>
	<string name="q9a">a) qualidade de projeto e qualidade de conformidade</string>
	<string name="q9b">b) qualidade de projeto e qualidade de software</string>
	<string name="q9c">c) qualidade de conformidade e qualidade de software</string>
	<string name="q9d">d) qualidade de projeto e qualidade de serviços</string>
	<string name="q9e">e) qualidade de conformidade e qualidade de serviços</string>
	<string name="q10">Definição de qualidade de software por Pressman95:</string>
	<string name="q10a">a) conformidade a requisitos funcionais e de desempenho explicitamente declarados, a padrões de desenvolvimento claramente documentados e a características implícitas que não são esperadas de todo software profissionalmente desenvolvido</string>
	<string name="q10b">b) conformidade a requisitos não funcionais e de desempenho explicitamente declarados, a padrões de desenvolvimento claramente documentados e a características implícitas que são esperadas de todo software profissionalmente desenvolvido</string>
	<string name="q10c">c) conformidade a requisitos funcionais e de desempenho implicitamente declarados, a padrões de desenvolvimento claramente documentados e a características explícitas que são esperadas de todo software profissionalmente desenvolvido</string>
	<string name="q10d">d) conformidade a requisitos não funcionais e de desempenho implicitamente declarados, a padrões de desenvolvimento claramente documentados e a características implícitas que são esperadas de todo software profissionalmente desenvolvido</string>
	<string name="q10e">e) conformidade a requisitos funcionais e de desempenho explicitamente declarados, a padrões de desenvolvimento claramente documentados e a características implícitas que são esperadas de todo software profissionalmente desenvolvido</string>
	<string name="q11">Segundo o modelo de qualidade de McCall, as seguintes características fazem parte do item Operação:</string>
	<string name="q11a">a) manutenibilidade, portabilidade, reusabilidade, interoperabilidade</string>
	<string name="q11b">b) correção, manutenibilidade, integridade, testabilidade</string>
	<string name="q11c">c) manutenibilidade, flexibilidade, testabilidade</string>
	<string name="q11d">d) correção, confiabilidade, integridade, eficiência</string>
	<string name="q11e">e) portabilidade, reusabilidade, interoperabilidade, testabilidade</string>
	<string name="q12">Segundo o modelo de qualidade de McCall, as seguintes características fazem parte do item Revisão:</string>
	<string name="q12a">a) portabilidade, manutenibilidade, interoperabilidade</string>
	<string name="q12b">b) manutenibilidade, flexibilidade, testabilidade</string>
	<string name="q12c">c) manutenibilidade, flexibilidade, interoperabilidade</string>
	<string name="q12d">d) correção, confiabilidade, eficiência</string>
	<string name="q12e">e) portabilidade, reusabilidade, interoperabilidade</string>
	<string name="q13">Segundo o modelo de qualidade de McCall, as seguintes características fazem parte do item Transição:</string>
	<string name="q13a">a) portabilidade, manutenibilidade, interoperabilidade</string>
	<string name="q13b">b) manutenibilidade, flexibilidade, testabilidade</string>
	<string name="q13c">c) portabilidade, reusabilidade, interoperabilidade</string>
	<string name="q13d">d) correção, confiabilidade, eficiência</string>
	<string name="q13e">e) manutenibilidade, flexibilidade, interoperabilidade</string>
	<string name="q14">Com relação ao uso do produto (características operacionais), correção é:</string>
	<string name="q14a">a) o quanto um programa satisfaz a sua especificação e cumpre os objetivos visados pelo cliente;</string>
	<string name="q14b">b) a quantidade de recursos computacionais e de código exigida para que um programa	execute	sua	função;</string>
	<string name="q14c">c) o quanto	um programa	executa	a função pretendida	com	a precisão exigida;</string>
	<string name="q14d">d) o quanto de esforço é necessário para aprender, preparar a entrada e interpretar a saída de um programa.</string>
	<string name="q14e">e) o quanto o acesso ao software ou aos dados por pessoas não autorizadas pode	ser	controlado;</string>
	<string name="q15">Com relação ao uso do produto (características operacionais), confiabilidade é:</string>
	<string name="q15a">a) o quanto um programa satisfaz a sua especificação e cumpre os objetivos visados pelo cliente;</string>
	<string name="q15b">b) a quantidade de recursos computacionais e de código exigida para que um programa	execute	sua	função;</string>
	<string name="q15c">c) o quanto de esforço é necessário para aprender, preparar a entrada e interpretar a saída de um programa;</string>
	<string name="q15d">d) o quanto	um programa	executa	a função pretendida	com	a precisão exigida;</string>
	<string name="q15e">e) o quanto o acesso ao software ou aos dados por pessoas não autorizadas pode	ser	controlado;</string>
	<string name="q16">Com relação ao uso do produto (características operacionais), eficiência é:</string>
	<string name="q16a">a) o quanto um programa satisfaz a sua especificação e cumpre os objetivos visados pelo cliente;</string>
	<string name="q16b">b) o quanto o acesso ao software ou aos dados por pessoas não autorizadas pode	ser	controlado;</string>
	<string name="q16c">c) o quanto de esforço é necessário para aprender, preparar a entrada e interpretar a saída de um programa;</string>
	<string name="q16d">d) o quanto	um programa	executa	a função pretendida	com	a precisão exigida;</string>
</resources>